--- a/app/src/main/res/layout/activity_launch_list.xml
+++ b/app/src/main/res/layout/activity_launch_list.xml
@@ -4,16 +4,24 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.list.ListActivity">
+    tools:context=".ui.apollo.LaunchListActivity">
 
     <Button
-        android:id="@+id/back"
+        android:id="@+id/to_main_activity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Go back"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        android:text="To main activity"/>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler_view"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/to_main_activity"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
