--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -12,4 +12,11 @@
         android:layout_height="wrap_content"
         android:text="View List"/>
 
+    <Button
+        android:id="@+id/to_nested_rv"
+        android:layout_gravity="center_horizontal|bottom"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Nested RV"/>
+
 </FrameLayout>
