--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,4 +13,13 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
+    
+    <style name="Chip"
+        parent="TextAppearance.MaterialComponents.Chip">
+        <item name="android:textSize">11sp</item>
+        <item name="fontFamily">@font/manrope_bold</item>
+        <item name="chipMinHeight">16dp</item>
+        <item name="chipMinTouchTargetSize">0dp</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
 </resources>
